직접 작성한 css/js/이미지를 bootstrap 폴더와 분리

--- a/app_server/views/find.pug
+++ b/app_server/views/find.pug
@@ -37,7 +37,7 @@ block content
             path(fill-rule="evenodd" d="M13.5 2.5a.5.5 0 01.5.5v4a2.5 2.5 0 01-2.5 2.5H3a.5.5 0 010-1h8.5A1.5 1.5 0 0013 7V3a.5.5 0 01.5-.5z" clip-rule="evenodd")
   
   <!-- GPS 알람 -->
-  script(src='/bootstrap/js/alram.js')
+  script(src='/javascripts/alram.js')
 
   <!-- 질문1 -->
   br
