--- a/app_server/views/home.pug
+++ b/app_server/views/home.pug
@@ -43,63 +43,63 @@ block content
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/movie.PNG')
+          img.max-small(src='/images/movie.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 교양
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 영화관 전시관
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/sport.PNG')
+          img.max-small(src='/images/sport.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 레포츠
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 스포츠 등산로 산책로
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/art.PNG')
+          img.max-small(src='/images/art.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 미술
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 만화 소묘
 
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/diy.PNG')
+          img.max-small(src='/images/diy.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 공예
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 꽃기예 꽃꽂이 종이접기
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/language.PNG')
+          img.max-small(src='/images/language.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 어학
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 영어학원 논술학원
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/dance.PNG')
+          img.max-small(src='/images/dance.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 춤
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 댄스 무용 연극
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/cook.PNG')
+          img.max-small(src='/images/cook.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 요리
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 바리스타 소믈리에
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/music.PNG')
+          img.max-small(src='/images/music.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 음악
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 드럼 피아노 노래방
     
     .col-6.col-sm-4.col-md-2
       button.btn(type="button" style="background-color: #FFFFFF;")
         a(href='/place' style="color:black;")
-          img.max-small(src='/bootstrap/images/beauty.PNG')
+          img.max-small(src='/images/beauty.PNG')
         h3(style="font-family: 'Noto Sans KR', sans-serif;") 패션
         p(style="font-family: 'Nanum Gothic', sans-serif; font-size:10pt; font-color:gray;") 메이크업
     
