--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width', initial-scale=1.0)
     title=title
-    link(rel='stylesheet', href='/bootstrap/css/design.css')
+    link(rel='stylesheet', href='/stylesheets/design.css')
     link(href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Comic+Neue:wght@300&family=Do+Hyeon&family=Gugi&family=Nanum+Gothic:wght@400;800&family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet")
 
   body
@@ -11,8 +11,6 @@ html
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js")
-    script(src='/javascripts/jquery-1.11.1.min.js')
-    script(src='/bootstrap/js/bootstrap.min.js')
 
     <!-- 첫번째 메뉴 -->
     nav.navbar.navbar-expand-sm.navbar-light.sticky-top(style="background-color: #E7F6FD;")
